[App][MediaPlayer] main screen created
LocalMediaPlayer added to override system app
Media app layout changed to meet PSA requirements (using psa widgets)
Posibility to switch media to radio added
Base tab navigation added for media app
Repeat and shuffle actions added
Seeking by touching seek bar added

Jira#PSAACPOC-115 PSAACPOC-223

Change-Id: Ifa9f77bae3b4df08e82c8261dc149685c35881fa

--- a/res/layout/initial_no_content.xml
+++ b/res/layout/initial_no_content.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2016, The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,13 +14,12 @@
   limitations under the License.
 -->
 
-<com.android.car.view.MaxWidthLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.android.car.view.MaxWidthLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:carMaxWidth="@dimen/apps_max_content_width"
-    android:animateLayoutChanges="true" >
+    android:animateLayoutChanges="true"
+    app:carMaxWidth="@dimen/apps_max_content_width">
 
     <RelativeLayout
         android:id="@+id/initial_view"
@@ -33,8 +31,8 @@
             android:id="@+id/loading_spinner"
             android:layout_width="match_parent"
             android:layout_height="@dimen/car_list_item_height"
-            android:layout_centerInParent="true"
             android:layout_alignWithParentIfMissing="true"
+            android:layout_centerInParent="true"
             android:indeterminateDrawable="@drawable/music_buffering"
             android:visibility="gone" />
 
