[MediaPlayer] Library screen
Library screen added
(TODO: individual categories screens)

Jira# PSAACPOC-118

Change-Id: I2e3c33afe9fe4953b94b8fbb0de86db57190ac35

--- a/res/values/psa_strings.xml
+++ b/res/values/psa_strings.xml
@@ -15,4 +15,11 @@
     <string name="player_radio_tab">PLAYER</string>
     <string name="station_list_radio_tab">STATION LIST</string>
     <string name="favourites_radio_tab">FAVOURITES</string>
+
+    <!-- Library labels -->
+    <string name="library_category_artists">ARTISTS</string>
+    <string name="library_category_playlists">PLAYLISTS</string>
+    <string name="library_category_albums">ALBUMS</string>
+    <string name="library_category_genres">GENRES</string>
+    <string name="library_category_folders">FOLDERS</string>
 </resources>
