--- a/res/layout/psa_media_browse_fragment.xml
+++ b/res/layout/psa_media_browse_fragment.xml
@@ -1,10 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="left"
-    android:layout_marginEnd="@dimen/car_drawer_right_margin"
-    android:background="@color/car_card"
-    android:paddingTop="@dimen/lens_header_height"></FrameLayout>
+    android:layout_height="match_parent">
+
+    <com.harman.psa.widget.gridlist.layout.GridListGroup
+        android:id="@+id/library_grid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:listSelector="#00000000"
+        app:columnCount="4"></com.harman.psa.widget.gridlist.layout.GridListGroup>
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/recently_playlist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:visibility="gone"></FrameLayout>
+</LinearLayout>
+
+
