[CarMedia][Notification] Dialog for new connected source
Show notification when usb device is connected.

Jira#PSAACPOC-238

Change-Id: I045baae42bfb89e75d6d9754a90a28b838b73710

--- a/res/values/psa_strings.xml
+++ b/res/values/psa_strings.xml
@@ -17,4 +17,7 @@
     <string name="favourites_radio_tab">FAVOURITES</string>
 
     <string name="various_artists">VARIOUS ARTISTS</string>
+    <!-- Notification -->
+    <string name="psa_general_notification_title">Media Center</string>
+    <string name="psa_general_notification_content">%1$s storage is now available in Media Center. Tap to play</string>
 </resources>
