--- a/res/values/psa_strings.xml
+++ b/res/values/psa_strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources>
     <!-- Music -->
     <!-- Show demo profile name-->
     <string name="profile_name_text">[Profile Name]</string>
@@ -15,11 +15,4 @@
     <string name="player_radio_tab">PLAYER</string>
     <string name="station_list_radio_tab">STATION LIST</string>
     <string name="favourites_radio_tab">FAVOURITES</string>
-
-    <!-- Library labels -->
-    <string name="library_category_artists">ARTISTS</string>
-    <string name="library_category_playlists">PLAYLISTS</string>
-    <string name="library_category_albums">ALBUMS</string>
-    <string name="library_category_genres">GENRES</string>
-    <string name="library_category_folders">FOLDERS</string>
 </resources>
