--- a/res/values/psa_styles.xml
+++ b/res/values/psa_styles.xml
@@ -3,6 +3,12 @@
 
     <style name="PSAAppDayTheme" parent="AppTheme">
         <item name="psa_general_background_color1">@color/psa_general_day_background_color1</item>
+        <item name="psa_general_background_color1_opacity_60">
+            @color/psa_general_day_background_color1_opacity_60
+        </item>
+        <item name="psa_general_background_color1_opacity_40">
+            @color/psa_general_day_background_color1_opacity_40
+        </item>
         <item name="psa_general_background_color2">@color/psa_general_day_background_color2</item>
         <item name="psa_general_background_color3">@color/psa_general_day_background_color3</item>
         <item name="psa_general_content_color1">@color/psa_general_day_content_color1</item>
@@ -10,6 +16,9 @@
         <item name="psa_general_content_color3">@color/psa_general_day_content_color3</item>
         <item name="psa_general_major_color1">@color/psa_general_day_major_color1</item>
         <item name="psa_general_major_color2">@color/psa_general_day_major_color2</item>
+        <item name="psa_general_major_color2_opacity_60">
+            @color/psa_general_day_major_color2_opacity_60
+        </item>
         <item name="psa_general_major_color2_opacity_30">
             @color/psa_general_day_major_color2_opacity_30
         </item>
@@ -20,6 +29,12 @@
 
     <style name="PSAAppNightTheme" parent="AppTheme">
         <item name="psa_general_background_color1">@color/psa_general_night_background_color1</item>
+        <item name="psa_general_background_color1_opacity_60">
+            @color/psa_general_night_background_color1_opacity_60
+        </item>
+        <item name="psa_general_background_color1_opacity_40">
+            @color/psa_general_night_background_color1_opacity_40
+        </item>
         <item name="psa_general_background_color2">@color/psa_general_night_background_color2</item>
         <item name="psa_general_background_color3">@color/psa_general_night_background_color3</item>
         <item name="psa_general_content_color1">@color/psa_general_night_content_color1</item>
@@ -27,6 +42,9 @@
         <item name="psa_general_content_color3">@color/psa_general_night_content_color3</item>
         <item name="psa_general_major_color1">@color/psa_general_night_major_color1</item>
         <item name="psa_general_major_color2">@color/psa_general_night_major_color2</item>
+        <item name="psa_general_major_color2_opacity_60">
+            @color/psa_general_night_major_color2_opacity_60
+        </item>
         <item name="psa_general_major_color2_opacity_30">
             @color/psa_general_night_major_color2_opacity_30
         </item>
