[MediaPlayer] Library screen
Albums' tracks list screen added
Genres category screen added
(TODO: extra actions and active items showing)
Adapter for the rest screens added

Jira# PSAACPOC-118

Change-Id: I6fe1897cda5656a4043dd8e218f0277781aeadad

--- a/res/values/psa_strings.xml
+++ b/res/values/psa_strings.xml
@@ -15,4 +15,6 @@
     <string name="player_radio_tab">PLAYER</string>
     <string name="station_list_radio_tab">STATION LIST</string>
     <string name="favourites_radio_tab">FAVOURITES</string>
+
+    <string name="various_artists">VARIOUS ARTISTS</string>
 </resources>
