--- a/res/layout/psa_media_library_category_grid_fragment.xml
+++ b/res/layout/psa_media_library_category_grid_fragment.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="128px"
-        android:background="@color/psa_general_day_major_color1">
+        android:background="?attr/psa_general_background_color2">
 
         <ImageButton
             android:id="@+id/back_button"
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_toRightOf="@id/back_button"
             android:orientation="vertical">
 
             <TextView
@@ -29,13 +30,16 @@
                 style="@style/PsaTextContentPrimary2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="start"
+                android:textColor="?attr/psa_general_major_color1" />
 
             <TextView
                 android:id="@+id/category_subtitle"
+                style="@style/PsaTextContentSecondary2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="start"
+                android:textColor="?attr/psa_general_content_color2"
                 android:visibility="gone" />
         </LinearLayout>
     </RelativeLayout>
