[MediaPlayer] Library screen
Rest categories screens added
Index showing added to artists screen
User name showing on main screen added
Extra actions added to items
Shuffle all actions added to categories
(TO DO: active item showing, recently played list)

Jira# PSAACPOC-118, PSAACPOC-275

Change-Id: I5bdb61c834d13fa46edc74275d20f4b7eaff9543

--- a/res/layout/psa_media_library_category_list_fragment.xml
+++ b/res/layout/psa_media_library_category_list_fragment.xml
@@ -48,6 +48,12 @@
         android:layout_height="wrap_content"
         android:background="@color/psa_general_major_color1" /> -->
 
+    <com.harman.psa.widget.verticallist.items.SimpleItemView
+        android:id="@+id/shuffle_list_action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
     <com.harman.psa.widget.verticallist.PsaRecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
