[CarMedia] Playlists feature
Implemented class for saving current tracklist to external storage.
Added save playlist button to MediaPlaylistFragment.

Jira#PSAACPOC-290

Change-Id: I3fecdc2d3aaf5bccf23df8c712f4865ca1edcf03

--- a/res/layout/psa_media_playlist_fragment.xml
+++ b/res/layout/psa_media_playlist_fragment.xml
@@ -36,5 +36,13 @@
             android:layout_height="@dimen/psa_media_action_size_height"
             android:scaleType="centerInside" />
 
+        <com.harman.psa.widget.button.PSAIconButton
+            android:id="@+id/playlist_save"
+            style="@style/IconButton"
+            android:src="@drawable/psa_media_button_icon_playlist_save"
+            android:layout_width="@dimen/psa_media_action_size_width"
+            android:layout_height="@dimen/psa_media_action_size_height"
+            android:scaleType="centerInside" />
+
     </LinearLayout>
 </RelativeLayout>
