--- a/res/layout/psa_media_playlist_fragment.xml
+++ b/res/layout/psa_media_playlist_fragment.xml
@@ -39,6 +39,7 @@
         <com.harman.psa.widget.button.PSAIconButton
             android:id="@+id/playlist_save"
             style="@style/IconButton"
+            android:visibility="gone"
             android:src="@drawable/psa_media_button_icon_playlist_save"
             android:layout_width="@dimen/psa_media_action_size_width"
             android:layout_height="@dimen/psa_media_action_size_height"
