[CarMedia][Widget] Create 2x1 and 1x1 widget
Add 2x1 and 1x1 widget for media

Jira PSAACPOC-320

Change-Id: Ie29694e58912ebc295785e02ea0daae00c0eeafa

--- a/res/values/psa_dimens.xml
+++ b/res/values/psa_dimens.xml
@@ -32,4 +32,6 @@
     <dimen name="psa_media_player_progress_container_padding_top">32px</dimen>
     <dimen name="psa_media_player_progress_time_text_width">96px</dimen>
 
+    <dimen name="psa_tab_weight">320dp</dimen>
+
     </resources>
