--- a/res/layout/now_playing_screen.xml
+++ b/res/layout/now_playing_screen.xml
@@ -216,7 +216,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:gravity="end"
+                android:gravity="start"
                 android:textColor="?attr/psa_general_content_color2" />
 
             <TextView
