[CarMedia][UsbSource] USB dis/connection scenario and events
Should be implemented:
1) Notification for wrong usb device
2) Notification actions.(open and play)
3) Toast for incompatibility devices. (two toast messages)

All actions and algorithm From AXURE:
SCs8. USB issues
MMs13 USB dis\connection with event indication

Jira#PSAACPOC-253

Change-Id: Idffd3f6de7dc1a30cf6c092597a230f02c7c33e2

--- a/res/values/psa_strings.xml
+++ b/res/values/psa_strings.xml
@@ -20,6 +20,8 @@
     <!-- Notification -->
     <string name="psa_general_notification_title">Media Center</string>
     <string name="psa_general_notification_content">%1$s storage is now available in Media Center. Tap to play</string>
+    <string name="psa_general_notification_title_usb">USB</string>
+    <string name="psa_general_notification_content_usb">Over current detected. Unplug this USB device to protect system and device integrity</string>
 
     <string name="library_item_play">Play This Item</string>
     <string name="library_item_play_next">Play Next</string>
