[CarMedia] Add shortcuts handling
Add broadcast receivers to fragments to listen to create shortcut broadcast
shortcut actions is handled as new intents
Show available actions highlighted in edit mode
Show unavailable in edit mode actions as disabled

Jira# PSAACPOC-249

Change-Id: Iecbaf1382fc6a0fa5507a2e9019eacd045524e1a

--- a/res/values/psa_strings.xml
+++ b/res/values/psa_strings.xml
@@ -40,6 +40,15 @@
     <string name="permission_denied">Permission denied</string>
     <string name="no_data">No data</string>
     <string name="artist">Artist</string>
-    <string name="album">album</string>
-    <string name="song">song</string>
+    <string name="album">Album</string>
+    <string name="song">Song</string>
+
+
+    <!-- Megic Touch / Edge -->
+    <string name="psa_edge_play_next_action">Play Next</string>
+    <string name="psa_edge_start_play_action">Start Play</string>
+    <string name="psa_edge_play_item_action">Play %s</string>
+    <string name="psa_edge_shuffle_play_item_action">Shuffle Play %s</string>
+
+
 </resources>
