--- a/res/xml/media_widget_2x1.xml
+++ b/res/xml/media_widget_2x1.xml
@@ -3,7 +3,7 @@
     android:minWidth="@dimen/psa_2x1_widget_width"
     android:minHeight="@dimen/psa_widget_height"
     android:updatePeriodMillis="86400000"
-    android:previewImage="@drawable/ic_music"
+    android:previewImage="@drawable/psa_widget_carmedia_2x1_preview_image_alfa"
     android:initialKeyguardLayout="@layout/psa_icon_text_2x1_widget"
     android:initialLayout="@layout/psa_icon_text_2x1_widget"
     android:resizeMode="horizontal|vertical"
