--- a/res/layout/psa_media_library_category_grid_fragment.xml
+++ b/res/layout/psa_media_library_category_grid_fragment.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="128px"
-        android:background="?attr/psa_general_background_color2">
+        android:background="@color/psa_general_background_color2">
 
         <ImageButton
             android:id="@+id/back_button"
@@ -16,6 +16,7 @@
             android:layout_height="128px"
             android:layout_alignParentStart="true"
             android:background="@color/psa_transparent_color"
+            android:tint="@color/psa_general_content_color1"
             android:src="@drawable/psa_general_back_image" />
 
         <LinearLayout
@@ -31,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:textColor="?attr/psa_general_major_color1" />
+                android:textColor="@color/psa_general_major_color1" />
 
             <TextView
                 android:id="@+id/category_subtitle"
@@ -39,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:textColor="?attr/psa_general_content_color2"
+                android:textColor="@color/psa_general_content_color2"
                 android:visibility="gone" />
         </LinearLayout>
     </RelativeLayout>
