--- a/res/layout/radio_main_screen.xml
+++ b/res/layout/radio_main_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="?attr/psa_general_background_color1">
+    android:background="@color/psa_general_background_color1">
 
     <LinearLayout
         android:id="@+id/container"
