--- a/res/layout/activity_media_widget1x1_configure.xml
+++ b/res/layout/activity_media_widget1x1_configure.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/psa_general_background_color1"
+    android:background="@color/psa_general_background_color1"
     android:orientation="horizontal">
 
     <com.harman.psa.widget.tabview.PSATabLayout
