[CarMedia] add widget views
Add fragments for radio and media widget to open in texture view
Open those fragments if intent has required extras
Add source choosing functionality

Depends on changes
Id: I2c102ef34068da8f9ec5681a1327881622785001
Id: I205e95d5fa574eb9d4886b52ec456ecae31e96c8

Jira# PSAACPOC-420

Change-Id: If00d36650b70ea53740c696bcef4ad2af65cea97

--- a/res/layout/initial_no_content.xml
+++ b/res/layout/initial_no_content.xml
@@ -18,8 +18,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-   >
+    android:animateLayoutChanges="true" >
     <!--app:carMaxWidth="@dimen/apps_max_content_width"-->
     <RelativeLayout
         android:id="@+id/initial_view"
@@ -37,6 +36,8 @@
             android:indeterminateDrawable="@drawable/music_buffering"
             android:visibility="gone" />
         <!--android:layout_height="@dimen/car_list_item_height"-->
+
+
         <ImageView
             android:id="@+id/error_icon"
             android:layout_width="@dimen/missing_permission_icon_size"
