--- a/res/layout/psa_media_widget.xml
+++ b/res/layout/psa_media_widget.xml
@@ -18,20 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="512px">
 
-<!--            <com.android.car.media.widget.ui.CoverFlowPager
-                android:id="@+id/coverFlow"
+            <com.android.car.media.widget.ui.CoverFlowPager
+                android:id="@+id/albumArtCoverFlow"
                 android:layout_width="@dimen/media_widget_cover_flow_size"
                 android:layout_height="@dimen/media_widget_cover_flow_size"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/media_widget_cover_flow_top_margin" />-->
-            <ImageView
-                android:id="@+id/albumArtWidget"
-                android:layout_width="320px"
-                android:layout_height="320px"
-                android:layout_marginTop="50px"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"/>
+                android:layout_marginTop="@dimen/media_widget_cover_flow_top_margin" />
 
             <com.android.car.media.common.MediaAppSelectorWidget
                 android:id="@+id/app_switch_container"
@@ -51,7 +44,8 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/subTitle"
                 android:layout_centerInParent="true"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:textColor="@color/psa_general_content_color1" />
 
             <TextView
                 android:id="@+id/subTitle"
@@ -61,7 +55,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
                 android:gravity="center"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:textColor="@color/psa_general_content_color1" />
 
         </RelativeLayout>
 
@@ -77,24 +72,27 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:tint="@color/psa_general_content_color1"
-                android:src="@drawable/psa_switch_to_radio_button_icon"/>
+                android:padding="30px"
+                android:src="@drawable/psa_switch_to_radio_button_icon"
+                android:tint="@color/psa_general_content_color1" />
 
             <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/play_pause_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:tint="@color/psa_general_content_color1"
-                android:src="@drawable/psa_media_button_icon_play"/>
+                android:padding="30px"
+                android:src="@drawable/psa_media_button_icon_play"
+                android:tint="@color/psa_general_content_color1" />
 
             <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/next_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:tint="@color/psa_general_content_color1"
-                android:src="@drawable/psa_media_button_icon_next"/>
+                android:padding="30px"
+                android:src="@drawable/psa_media_button_icon_next"
+                android:tint="@color/psa_general_content_color1" />
 
         </LinearLayout>
     </LinearLayout>
